Bug 977029 - When color value changes, refresh color control frame instead of (wrongly) changing value attribute. r=bz, a=sledru