layout/forms/nsColorControlFrame.h
@@ -25,8 +25,9 @@ public:
 
   virtual void DestroyFrom(nsIFrame* aDestructRoot) MOZ_OVERRIDE;
 
-  NS_DECL_FRAMEARENA_HELPERS
+  NS_DECL_QUERYFRAME_TARGET(nsColorControlFrame)
   NS_DECL_QUERYFRAME
+  NS_DECL_FRAMEARENA_HELPERS
 
   virtual nsIAtom* GetType() const MOZ_OVERRIDE;
 
@@ -48,11 +49,11 @@ public:
 
   virtual Element* GetPseudoElement(nsCSSPseudoElements::Type aType) MOZ_OVERRIDE;
 
+  // Refresh the color swatch, using associated input's value
+  nsresult UpdateColor();
+
 private:
   nsColorControlFrame(nsStyleContext* aContext);
-
-  // Update the color swatch
-  nsresult UpdateColor();
 
   nsCOMPtr<Element> mColorContent;
 };
